<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sunxuedian.graduationproject.view.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightOfLoginImageBg"
        android:background="@drawable/home">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/sizeOfBackIcon"
            android:layout_height="@dimen/sizeOfBackIcon"
            android:src="@drawable/back_white"
            android:layout_margin="@dimen/sizeOfLagerMargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/sizeOfLagerMargin"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linePhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/marginOfLoginView"
        android:layout_marginRight="@dimen/marginOfLoginView"
        android:layout_marginTop="@dimen/sizeOfLagerMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phoneNum"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_phoneNum_hint"
            android:textColorHint="@color/colorMainGray"
            android:paddingBottom="@dimen/paddingBottomOfEditText"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineCheckCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/marginOfLoginView"
        android:layout_marginRight="@dimen/marginOfLoginView"
        android:layout_marginTop="@dimen/sizeOfLagerMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_code"
            android:textColor="@color/black"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etCheckCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_phone_code_hint"
                android:textColorHint="@color/colorMainGray"
                android:paddingBottom="@dimen/paddingBottomOfEditText"
                />
            <TextView
                android:id="@+id/tvGetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/text_get_phone_code"
                android:textSize="@dimen/textSizeOfGetCodeText"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/marginOfLoginView"
        android:layout_marginRight="@dimen/marginOfLoginView"
        android:layout_marginTop="@dimen/sizeOfLagerMargin"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_hint"
            android:textColorHint="@color/colorMainGray"
            android:paddingBottom="@dimen/paddingBottomOfEditText"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/marginOfLoginView"
        android:layout_marginRight="@dimen/marginOfLoginView"
        android:layout_marginTop="@dimen/sizeOfLagerMargin"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rePassword"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_hint"
            android:textColorHint="@color/colorMainGray"
            android:paddingBottom="@dimen/paddingBottomOfEditText"
            android:inputType="textPassword"/>
    </LinearLayout>


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_next"
        android:layout_margin="@dimen/marginOfLoginView"
        android:background="@drawable/bg_login_or_register_button"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeOfLoginOrRegisterButton"/>

</LinearLayout>
