<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sunxuedian.graduationproject.view.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightOfLoginImageBg"
        android:background="@drawable/home">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/widthOfBackIcon"
            android:layout_height="@dimen/sizeOfBackIcon"
            android:src="@drawable/back_white"
            android:layout_margin="@dimen/sizeOfLagerMargin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/sizeOfLagerMargin"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/marginOfLoginView"
        android:layout_marginRight="@dimen/marginOfLoginView"
        android:layout_marginTop="@dimen/sizeOfLagerMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phoneNum"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_phoneNum_hint"
            android:textColorHint="@color/colorMainGray"
            android:paddingBottom="@dimen/paddingBottomOfEditText"
            android:inputType="phone"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/marginOfLoginView"
        android:layout_marginRight="@dimen/marginOfLoginView"
        android:layout_marginTop="@dimen/sizeOfLagerMargin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/black"/>
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_hint"
            android:textColorHint="@color/colorMainGray"
            android:paddingBottom="@dimen/paddingBottomOfEditText"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:layout_margin="@dimen/marginOfLoginView"
        android:background="@drawable/bg_btn_yellow"
        android:textColor="@color/white"
        android:textSize="@dimen/textSizeOfLoginOrRegisterButton"
        />

    <TextView
        android:id="@+id/tvGoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_go_register"
        android:layout_gravity="center_horizontal"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/sizeOfMiddleMargin">
        <ImageView
            android:layout_width="@dimen/sizeOfOtherLoginIcon"
            android:layout_height="@dimen/sizeOfOtherLoginIcon"
            android:src="@drawable/qq_icon"
            android:layout_margin="@dimen/sizeOfMiddleMargin" />
        <ImageView
            android:layout_width="@dimen/sizeOfOtherLoginIcon"
            android:layout_height="@dimen/sizeOfOtherLoginIcon"
            android:src="@drawable/weibo_icon"
            android:layout_margin="@dimen/sizeOfMiddleMargin" />
        <ImageView
            android:layout_width="@dimen/sizeOfOtherLoginIcon"
            android:layout_height="@dimen/sizeOfOtherLoginIcon"
            android:src="@drawable/wechat_icon"
            android:layout_margin="@dimen/sizeOfMiddleMargin" />

    </LinearLayout>

</LinearLayout>
