<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sunxuedian.graduationproject.view.activity.HouseListSwipeBackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/sizeOfBackIcon"
            android:layout_height="@dimen/sizeOfBackIcon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:layout_margin="@dimen/sizeOfMiddleMargin"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/heightOfSearchContent"
            android:background="@drawable/bg_gray_no_border_et_search"
            android:layout_toLeftOf="@+id/ivLocation"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_centerInParent="true"
            />
        <TextView
            android:id="@+id/tvSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_house_list_search_hint"
            android:gravity="center"
            android:drawableLeft="@drawable/search_gray_24"
            android:drawablePadding="@dimen/sizeOfMiddleMargin"
            android:textSize="@dimen/textSizeOfEtSearch"
            android:textColor="@color/colorMainGray_45"
            />
        
        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="@dimen/sizeOfLocationIcon"
            android:layout_height="@dimen/sizeOfLocationIcon"
            android:src="@drawable/location"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/sizeOfLagerMargin"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingBottom="@dimen/sizeOfMiddleMargin"
        android:paddingTop="@dimen/sizeOfLittleMargin">
        <TextView
            android:id="@+id/tvSearchFilterCheckInTime"
            style="@style/TextStyleOfSearchFilter"
            android:text="@string/text_check_in_time"
            />
        <TextView
            android:id="@+id/tvSearchFilterHouseArea"
            style="@style/TextStyleOfSearchFilter"
            android:text="@string/text_house_area"
            />
        <TextView
            android:id="@+id/tvSearchFilterMore"
            style="@style/TextStyleOfSearchFilter"
            android:text="@string/text_more_filter"
            />
        <TextView
            android:id="@+id/tvSearchFilterSort"
            style="@style/TextStyleOfSearchFilter"
            android:text="@string/text_recommend_sort"
            />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvHouseList"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v7.widget.RecyclerView>
</LinearLayout>
